--- a/environment.yml
+++ b/environment.yml
@@ -14,16 +14,18 @@ dependencies:
   - botocore=1.19.1
   - branca=0.4.1
   - brotlipy=0.7.0
-  - ca-certificates=2020.11.8
-  - certifi=2020.11.8
+  - ca-certificates=2020.12.5
+  - certifi=2020.12.5
   - cffi=1.14.3
   - chardet=3.0.4
   - cryptography=3.2.1
+  - cycler=0.10.0
   - decorator=4.4.2
   - defusedxml=0.6.0
   - docutils=0.15.2
   - entrypoints=0.3
   - folium=0.11.0
+  - freetype=2.10.4
   - idna=2.10
   - importlib-metadata=2.0.0
   - importlib_metadata=2.0.0
@@ -31,15 +33,22 @@ dependencies:
   - ipykernel=5.3.4
   - ipython=7.19.0
   - ipython_genutils=0.2.0
+  - ipywidgets=7.5.1
   - jedi=0.17.2
   - jinja2=2.11.2
   - jmespath=0.10.0
+  - jpeg=9b
   - json=0.1.1
   - jsonschema=3.2.0
   - jupyter_client=6.1.7
   - jupyter_core=4.7.0
   - jupyterlab_pygments=0.1.2
+  - kiwisolver=1.3.0
+  - lcms2=2.11
+  - lz4-c=1.9.2
   - markupsafe=1.1.1
+  - matplotlib=3.3.2
+  - matplotlib-base=3.3.2
   - mistune=0.8.4
   - nbclient=0.5.1
   - nbconvert=6.0.7
@@ -49,6 +58,7 @@ dependencies:
   - notebook=6.1.5
   - numpy=1.19.2
   - numpy-base=1.19.2
+  - olefile=0.46
   - openssl=1.1.1h
   - packaging=20.4
   - pandas=1.1.3
@@ -57,6 +67,7 @@ dependencies:
   - parso=0.7.1
   - pexpect=4.8.0
   - pickleshare=0.7.5
+  - pillow=8.0.1
   - pip=20.2.4
   - pkg-config=0.29.2
   - prometheus_client=0.9.0
@@ -90,7 +101,9 @@ dependencies:
   - wcwidth=0.2.5
   - webencodings=0.5.1
   - wheel=0.35.1
+  - widgetsnbextension=3.5.1
   - xz=5.2.5
   - zeromq=4.3.2
   - zipp=3.4.0
+  - zstd=1.4.5
 prefix: /opt/anaconda3/envs/transit_vis
