--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 
 # a list of commands to run before the main script
 before_script:
-    - pylint example
+    - pylint transit_vis/src
 
 # the actual commands to run
 script:
