--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ channels:
   - defaults
 dependencies:
   - argon2-cffi=20.1.0
+  - astroid=2.4.2
   - async_generator=1.10
   - attrs=20.3.0
   - backcall=0.2.0
@@ -14,8 +15,8 @@ dependencies:
   - botocore=1.19.1
   - branca=0.4.1
   - brotlipy=0.7.0
-  - ca-certificates=2020.12.5
-  - certifi=2020.12.5
+  - ca-certificates=2020.10.14
+  - certifi=2020.6.20
   - cffi=1.14.3
   - chardet=3.0.4
   - cryptography=3.2.1
@@ -34,6 +35,7 @@ dependencies:
   - ipython=7.19.0
   - ipython_genutils=0.2.0
   - ipywidgets=7.5.1
+  - isort=5.6.4
   - jedi=0.17.2
   - jinja2=2.11.2
   - jmespath=0.10.0
@@ -44,11 +46,13 @@ dependencies:
   - jupyter_core=4.7.0
   - jupyterlab_pygments=0.1.2
   - kiwisolver=1.3.0
+  - lazy-object-proxy=1.4.3
   - lcms2=2.11
   - lz4-c=1.9.2
   - markupsafe=1.1.1
   - matplotlib=3.3.2
   - matplotlib-base=3.3.2
+  - mccabe=0.6.1
   - mistune=0.8.4
   - nbclient=0.5.1
   - nbconvert=6.0.7
@@ -75,6 +79,7 @@ dependencies:
   - ptyprocess=0.6.0
   - pycparser=2.20
   - pygments=2.7.2
+  - pylint=2.6.0
   - pyopenssl=19.1.0
   - pyparsing=2.4.7
   - pyrsistent=0.17.3
@@ -95,6 +100,7 @@ dependencies:
   - terminado=0.9.1
   - testpath=0.4.4
   - tk=8.6.10
+  - toml=0.10.1
   - tornado=6.1
   - traitlets=5.0.5
   - urllib3=1.25.11
@@ -102,6 +108,7 @@ dependencies:
   - webencodings=0.5.1
   - wheel=0.35.1
   - widgetsnbextension=3.5.1
+  - wrapt=1.11.2
   - xz=5.2.5
   - zeromq=4.3.2
   - zipp=3.4.0
