changed pandas version to stop pylint check from failing the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,15 @@ before_install:
 install:
     - conda env create -q -n test-environment python=$TRAVIS_PYTHON_VERSION --file environment.yml
     - conda activate test-environment
-    - conda install --yes coverage coveralls pylint
+    - conda install --yes coverage coveralls
 
 # a list of commands to run before the main script
 before_script:
-    - pylint transit_vis/src
+    - pylint transit_vis/src/generate_transit_vis_map.py
+    - pylint transit_vis/src/vis_functions.py
+    - pylint transit_vis/src/transit_vis.py
+    - pylint transit_vis/src/summarize_rds.py
+    - pylint transit_vis/src/initialize_dynamodb.py
 
 # the actual commands to run
 script:
