--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
   - lazy-object-proxy=1.5.2
   - llvm-openmp=11.0.0
   - markupsafe=1.1.1
+  - matplotlib=3.3.3
   - mccabe=0.6.1
   - ncurses=6.2
   - numpy=1.19.1
